feat(devour)!: 移植龙杖容器保护与共享吞噬流程
- 接入主副手容器保护组件、长按轮盘和状态提示
- 统一吞噬目标排序、多部件去重与向上连锁
- 分离普通与超限冷却并修复零费用范围异常
- 同步禁用名单、双语手册和资源验证，增加服务端与客户端回归

BREAKING CHANGE: 吞噬禁用标签由 anvilcraft:devour_blacklist 改为 anvilcraft:devour_denylist，相关数据包需更新。